# Bioinformatics_assignment

./: CMakeLists.txt  main.c  setup.sh  split_freq.txt
Dataset/: dataset1.nex  dataset1.nex.mcmc  dataset1.nex.run1.p  dataset1.nex.run1.t  dataset1.nex.run2.p  dataset1.nex.run2.t
cuda/: CMakeLists.txt  cuda.cu
ncov/auspice/: ncov_global.json  ncov_global_tip-frequencies.json
ncov/benchmarks/: align_0.txt  align_1.txt  align_2.txt  refine_global.txt  tree_global.txt
ncov/data/: data.rar  nextstrain_ncov_2020-04-03_metadata.tsv  nextstrain_ncov_global_metadata.tsv
ncov/defaults/: auspice_config.json  subclades.tsv
ncov/docs/: naming_clades.md
ncov/logs/: align_0.txt  align_1.txt  align_2.txt  ancestral_global.txt  export_global.txt  filtered.txt  partition_sequences.txt  refiltered.txt  refine_global.txt  subclades_global.txt  subsample_global_global.txt  traits_global.txt  tree_global.txt
ncov/nextstrain_profiles/nextstrain/: europe_auspice_config.json  global_auspice_config.json  nextstrain_auspice_config_gisaid.json  nextstrain_auspice_config_zh.json  north-america_auspice_config.json  oceania_auspice_config.json  south-america_auspice_config.json
ncov/results/: sequence-diagnostics.tsv
ncov/results/global/: aa_muts.json  branch_lengths.json  colors.tsv  legacy_clades.json  ncov_with_accessions.json  ncov_with_accessions_and_travel_branches.json  subclades.json  temp_legacy_clades.json  temp_subclades.json  traits.json  (+4 more)
ncov/scripts/: add_priorities_to_meta.py  adjust_regional_meta.py
src/: CMakeLists.txt  bayes.c  bayes.h  globals.h  mb.h  mcmc.c
(+6 files in other folders)
