project(bayes_project)
find_package(MPI)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
cmake_minimum_required(VERSION 2.8)
add_subdirectory(cuda ./cuda/bin)
add_subdirectory(src ./src/bin)
set(EXTRA_LIBS ${EXTRA_LIBS} cpart Cuda ${MPI_C_LIBRARIES})
SET(CMAKE_C_COMPILER mpicc)
list(APPEND CMAKE_C_FLAGS "-lstdc++")
add_executable(bayes_project main.c)
target_link_libraries(bayes_project  ${EXTRA_LIBS} -lm -ldl)